--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
+    <title>Hay About A Lounge Chair AAL82 | Utility Design</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Utility Design</title>
+    <link rel="icon" href="https://media.utilitydesign.co.uk/favicon/default/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
