--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,6 @@
             <a href="#"><img class="icon" src="../assets/images/basketIcon.png" alt="basket icon" /></a>
         </div>
     </header>
-
     <ul class="navList">
         <li class="navItem"><a href="#">Furniture</a></li>
         <li class="navItem"><a href="#">Lighting</a></li>
@@ -44,9 +43,20 @@
         <li class="navItem"><a href="#">About</a></li>
         <li class="navItem"><a href="#">Our Stores</a></li>
     </ul>
+    <span class="route"></span>
+
     <div class="main">
-        MAIN CONTENT
+        <div class="productDisplay">
+            <img class="leftArrow" src="../assets/images/arrowLeft.png" />
+            <img class="productImage" src="../assets/images/productImage.png" />
+            <img class="rightArrow" src="../assets/images/arrowRight.png" />
+            <img class="productThumbnail" src="../assets/images/productImage.png" />
+        </div>
+        <div class="productForm">
+
+        </div>
     </div>
+
 </body>
 
 </html>
