--- a/views/index.html
+++ b/views/index.html
@@ -32,16 +32,7 @@
         </div>
     </header>
     <ul class="navList">
-        <!-- <li class="navItem"><a href="#">Furniture</a></li>
-        <li class="navItem"><a href="#">Lighting</a></li>
-        <li class="navItem"><a href="#">Home Accessories</a></li>
-        <li class="navItem"><a href="#">Collections</a></li>
-        <li class="navItem"><a href="#">Gifts</a></li>
-        <li class="navItem"><a href="#">Outlet</a></li>
-        <li class="navItem"><a href="#">Brands</a></li>
-        <li class="navItem"><a href="#">Blog</a></li>
-        <li class="navItem"><a href="#">About</a></li>
-        <li class="navItem"><a href="#">Our Stores</a></li> -->
+        <!-- get nav items from db -->
     </ul>
     <span class="route"></span>
 
