setup form layout

--- a/views/index.html
+++ b/views/index.html
@@ -34,17 +34,24 @@
     <ul class="navList">
         <!-- get nav items from db -->
     </ul>
-    <span class="route"></span>
+    <span class="route">
+        <!-- get route from db -->
+    </span>
 
     <div class="main">
         <div class="productDisplay">
-            <img class="leftArrow" src="../assets/images/arrowLeft.png" />
+            <a class="leftArrow" href="#"><img src="../assets/images/arrowLeft.png" /></a>
             <img class="productImage" src="../assets/images/productImage.png" />
-            <img class="rightArrow" src="../assets/images/arrowRight.png" />
+            <a class="rightArrow" href="#"><img class="rightArrow" src="../assets/images/arrowRight.png" /></a>
             <img class="productThumbnail" src="../assets/images/productImage.png" />
         </div>
-        <div class="productForm">
 
+        <div class="productForm">
+            <div class="formHeader">
+                <h2 class="productTitle">Hay About A Lounge Chair - Low AAL82</h2>
+                <span class="startingPrice">from:<h2>£779</h2></span>
+                <h5 class="orderTime">Made To Order - 6-8 weeks</h4>
+            </div>
         </div>
     </div>
 
