--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ header {
     text-align: center;
     grid-area: mainContent;
     display: grid;
-    grid-template-columns: 10fr 9fr;
+    grid-template-columns: 6fr 5fr;
     grid-template-areas: 'productDisplay productForm'
 }
 
@@ -149,5 +149,9 @@ header {
 /* TODO: LINE UP ARROWS AROUND PRODUCT IMAGE */
 .productForm {
     grid-area: productForm;
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
+    display: grid;
+}
+
+.productHeader {
 }
