--- a/views/index.html
+++ b/views/index.html
@@ -49,9 +49,29 @@
         <div class="productForm">
             <div class="formHeader">
                 <h2 class="productTitle">Hay About A Lounge Chair - Low AAL82</h2>
-                <span class="startingPrice">from:<h2>£779</h2></span>
-                <h5 class="orderTime">Made To Order - 6-8 weeks</h4>
+                <span class="priceFrom">from: </span><span class="currencySign">£</span><span
+                    class="startingPrice">779.00</span>
+                <h5 class="orderTime"> <img src="../assets/images/greenTick.png" /> Made To Order - 6-8 weeks</h4>
             </div>
+            <form class="formMain">
+                <label class="formLabel" for="fabricSelect">Fabric:</label>
+                <select class="formSelect" name="fabricSelect" id="fabricSelect">
+                    <option class="formOption" value="">Select your fabric</option>
+                    <option class="formOption" value="SteelcutTrio">Steelcut Trio</option>
+                </select>
+                <label class="formLabel" for="colourSelect">Colour:</label>
+                <select class="formSelect" name="colourSelect" id="colourSelect">
+                    <option class="formOption" value="">Select your colour</option>
+                </select>
+                <label class="formLabel" for="legSelect">Leg Finish:</label>
+                <select class="formSelect" name="legSelect" id="legSelect">
+                    <option class="formOption" value="">Select your leg finish</option>
+                </select>
+                <label class="formLabel" for="seatSelect">Optional Seat Cushion</label>
+                <select class="formSelect" name="seatSelect" id="seatSelect">
+                    <option class="formOption" value="">Select your seat cushion</option>
+                </select>
+            </form>
         </div>
     </div>
 
