--- a/views/index.html
+++ b/views/index.html
@@ -91,3 +91,9 @@
 </body>
 
 </html>
+
+<!-- TODO -->
+<!-- * functionality for form -->
+<!-- * change styling of selects so not hard coded -->
+<!-- * make form responsive -->
+<!-- media query to work for phones as well -->
