--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <script defer src="../scripts/api.js"></script>
     <script defer src="../scripts/script.js"></script>
 </head>
 
@@ -54,25 +55,46 @@
                 <h5 class="orderTime"> <img src="../assets/images/greenTick.png" /> Made To Order - 6-8 weeks</h4>
             </div>
             <form class="formMain">
-                <label class="formLabel" for="fabricSelect">Fabric:</label>
-                <select class="formSelect" name="fabricSelect" id="fabricSelect">
-                    <option class="formOption" value="">Select your fabric</option>
-                    <option value="SteelcutTrio">
-                        <div class="formOption">Steelcut Trio</div>
-                    </option>
-                </select>
-                <label class="formLabel" for="colourSelect">Colour:</label>
-                <select class="formSelect" name="colourSelect" id="colourSelect">
-                    <option class="formOption" value="">Select your colour</option>
-                </select>
-                <label class="formLabel" for="legSelect">Leg Finish:</label>
-                <select class="formSelect" name="legSelect" id="legSelect">
-                    <option class="formOption" value="">Select your leg finish</option>
-                </select>
-                <label class="formLabel" for="seatSelect">Optional Seat Cushion:</label>
-                <select class="formSelect" name="seatSelect" id="seatSelect">
-                    <option class="formOption" value="">Select your seat cushion</option>
-                </select>
+                <div class="formSelect-container">
+                    <label class="formLabel" for="fabricSelect">Fabric:</label>
+                    <p class="required">Selection required</p>
+                    <select class="formSelect" name="fabricSelect" id="fabricSelect">
+                        <option class="formOption" value="">Select your fabric</option>
+                        <option value="SteelcutTrio">
+                            <div class="formOption">Steelcut Trio</div>
+                        </option>
+                    </select>
+                </div>
+                <div class="formSelect-container">
+                    <label class="formLabel inactive" for="colourSelect">Colour:</label>
+                    <p class="required">Selection required</p>
+                    <select class="formSelect inactive" name="colourSelect" id="colourSelect">
+                        <option class="formOption" value="">Select your colour</option>
+                        <option class="formOption" value="">SCT105</option>
+                        <option class="formOption" value="">SCT124</option>
+                        <option class="formOption" value="">SCT153</option>
+                        <option class="formOption" value="">SCT195</option>
+                        <option class="formOption" value="">SCT213</option>
+                    </select>
+                </div>
+                <div class="formSelect-container">
+                    <label class="formLabel inactive" for="legSelect">Leg Finish:</label>
+                    <p class="required">Selection required</p>
+                    <select class="formSelect inactive" name="legSelect" id="legSelect">
+                        <option class="formOption" value="">Select your leg finish</option>
+                        <option class="formOption" value="">Black Stained Oak</option>
+                        <option class="formOption" value="">Clear Lacquered Oak</option>
+                        <option class="formOption" value="">Matt Lacquered Oak</option>
+                    </select>
+
+                </div>
+                <div class="formSelect-container">
+                    <label class="formLabel " for="seatSelect">Optional Seat Cushion:</label>
+                    <select class="formSelect-cushion" name="seatSelect" id="seatSelect">
+                        <option class="formOption" value="">None</option>
+                    </select>
+
+                </div>
             </form>
             <div class="priceCalc-container">
                 <p class="formLabel priceCalc-title">Quantity</p>
