complete form validation

--- a/views/index.html
+++ b/views/index.html
@@ -70,11 +70,11 @@
                     <p class="required">Selection required</p>
                     <select class="formSelect inactive" name="colourSelect" id="colourSelect">
                         <option class="formOption" value="">Select your colour</option>
-                        <option class="formOption" value="">SCT105</option>
-                        <option class="formOption" value="">SCT124</option>
-                        <option class="formOption" value="">SCT153</option>
-                        <option class="formOption" value="">SCT195</option>
-                        <option class="formOption" value="">SCT213</option>
+                        <option class="formOption" value="SCT105">SCT105</option>
+                        <option class="formOption" value="SCT124">SCT124</option>
+                        <option class="formOption" value="SCT153">SCT153</option>
+                        <option class="formOption" value="SCT195">SCT195</option>
+                        <option class="formOption" value="SCT213">SCT213</option>
                     </select>
                 </div>
                 <div class="formSelect-container">
@@ -82,16 +82,18 @@
                     <p class="required">Selection required</p>
                     <select class="formSelect inactive" name="legSelect" id="legSelect">
                         <option class="formOption" value="">Select your leg finish</option>
-                        <option class="formOption" value="">Black Stained Oak</option>
-                        <option class="formOption" value="">Clear Lacquered Oak</option>
-                        <option class="formOption" value="">Matt Lacquered Oak</option>
+                        <option class="formOption" value="Black Stained Oak">Black Stained Oak</option>
+                        <option class="formOption" value="Clear Lacquered Oak">Clear Lacquered Oak</option>
+                        <option class="formOption" value="Matt Lacquered Oak">Matt Lacquered Oak</option>
                     </select>
 
                 </div>
                 <div class="formSelect-container">
-                    <label class="formLabel " for="seatSelect">Optional Seat Cushion:</label>
-                    <select class="formSelect-cushion" name="seatSelect" id="seatSelect">
-                        <option class="formOption" value="">None</option>
+                    <label class="formLabel inactive" for="seatSelect">Optional Seat Cushion:</label>
+                    <p class="required">Selection required</p>
+                    <select class="formSelect inactive" name="seatSelect" id="seatSelect">
+                        <option class="formOption" value="None">None</option>
+                        <option class="formOption" value="In Same Fabric, Group 4">In Same Fabric, Group 4</option>
                     </select>
 
                 </div>
