--- a/views/index.html
+++ b/views/index.html
@@ -60,8 +60,8 @@
                     <p class="required">Selection required</p>
                     <select class="formSelect" name="fabricSelect" id="fabricSelect">
                         <option class="formOption" value="">Select your fabric</option>
-                        <option value="SteelcutTrio">
-                            <div class="formOption">Steelcut Trio</div>
+                        <option value="Steelcut Trio (+£30.00)">
+                            <div class="formOption">Steelcut Trio (+£30.00)</div>
                         </option>
                     </select>
                 </div>
@@ -92,12 +92,23 @@
                     <label class="formLabel inactive" for="seatSelect">Optional Seat Cushion:</label>
                     <p class="required">Selection required</p>
                     <select class="formSelect inactive" name="seatSelect" id="seatSelect">
+                        <option class="formOption" value="">Select Optional Seat Cushion</option>
                         <option class="formOption" value="None">None</option>
-                        <option class="formOption" value="In Same Fabric, Group 4">In Same Fabric, Group 4</option>
+                        <option class="formOption" value="In Same Fabric, Group 4 (+£109.00)">In Same Fabric, Group 4
+                            (+£109.00)
+                        </option>
                     </select>
 
                 </div>
             </form>
+            <div class="orderReview">
+                <p>Hay About A Lounge Chair - Low AAL82: £779.00</p>
+                <p id="Fabric:"><span>Fabric: </span></p>
+                <p id="Colour:"><span>Colour: </span></p>
+                <p id="Leg Finish:"><span>Leg Finish: </span></p>
+                <p id="Optional Seat Cushion:"><span>Optional Seat Cushion: </span></p>
+                <p id="unitPrice"><span>Unit Price: </span></p>
+            </div>
             <div class="priceCalc-container">
                 <p class="formLabel priceCalc-title">Quantity</p>
                 <input class="quantityDisplay" value="1" />
@@ -117,7 +128,6 @@
 </html>
 
 <!-- TODO -->
-<!-- * functionality for form -->
 <!-- * change styling of selects so not hard coded -->
 <!-- * make form responsive -->
 <!-- media query to work for phones as well -->
