calculate unit price

--- a/views/index.html
+++ b/views/index.html
@@ -107,7 +107,7 @@
                 <p id="Colour:"><span>Colour: </span></p>
                 <p id="Leg Finish:"><span>Leg Finish: </span></p>
                 <p id="Optional Seat Cushion:"><span>Optional Seat Cushion: </span></p>
-                <p id="unitPrice"><span>Unit Price: </span></p>
+                <p id="unitPrice"></p>
             </div>
             <div class="priceCalc-container">
                 <p class="formLabel priceCalc-title">Quantity</p>
