--- a/styles/style.css
+++ b/styles/style.css
@@ -234,6 +234,17 @@ header {
     color: grey;
 }
 
+#unitPrice {
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 20px; 
+}
+
+.priceLabel {
+    font-size: 16px;
+    font-weight: 400;
+}
+
 .priceCalc-container {
     height: 230px;
     display: grid;
