render total price

--- a/views/index.html
+++ b/views/index.html
@@ -111,12 +111,14 @@
             </div>
             <div class="priceCalc-container">
                 <p class="formLabel priceCalc-title">Quantity</p>
-                <input class="quantityDisplay" value="1" />
+                <input class="quantityDisplay" disabled value="1" />
                 <div class="buttons">
-                    <button class="quantityChange-button"><img src="../assets/images/arrowUp.png" /></button>
-                    <button class="quantityChange-button"><img src="../assets/images/arrowDown.png" /></button>
+                    <button class="quantityChange-button" id="quantityInc"><img
+                            src="../assets/images/arrowUp.png" /></button>
+                    <button class="quantityChange-button" id="quantityInc"><img
+                            src="../assets/images/arrowDown.png" /></button>
                 </div>
-                <p class="total">Total £809.00</p>
+                <p class="total"></p>
                 <button class="addToBasket">Add to Basket</button>
                 <button class="wishList"><img src="../assets/images/wishList-button.png" /></button>
             </div>
