--- a/styles/style.css
+++ b/styles/style.css
@@ -266,6 +266,8 @@ header {
     height: 50px;
     font-size: 16px;
     text-align: center;
+    background-color: white;
+    border: 1px solid #cccccc;
 }
 
 .buttons {
@@ -282,7 +284,10 @@ header {
 }
 
 .total {
+    visibility: hidden;
     grid-area: total;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 .addToBasket {
