--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
                 <div class="buttons">
                     <button class="quantityChange-button" id="quantityInc"><img
                             src="../assets/images/arrowUp.png" /></button>
-                    <button class="quantityChange-button" id="quantityInc"><img
+                    <button class="quantityChange-button" id="quantityDec"><img
                             src="../assets/images/arrowDown.png" /></button>
                 </div>
                 <p class="total"></p>
