--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://media.utilitydesign.co.uk/favicon/default/favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -136,9 +137,11 @@
 
             <div id="shareLinks">
                 <p>Share online:</p>
-                <a href="#" class="shareLink"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="shareLink"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="shareLink"><i class="fab fa-pinterest"></i></a>
+                <a href="https://twitter.com/UtilityDesign" class="shareLink"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/utilitydesign.co.uk/" class="shareLink"><i
+                        class="fab fa-facebook-f"></i></a>
+                <a href="https://www.pinterest.com/utilitydesign/" class="shareLink"><i
+                        class="fab fa-pinterest"></i></a>
             </div>
         </div>
     </div>
